--- a/templates/pages/rover.html
+++ b/templates/pages/rover.html
@@ -21,7 +21,7 @@
                 landed at <br> Gale Crater, Mars <br>
                 11/26/2011 <br><br></a>
             <a href="https://www.nasa.gov/mission_pages/mars/main/index.html">Click HERE for more about Mars mission<br></a>
-            <a href='https://github.com/PdxCodeGuild/Class_Runtime_Terrors/tree/master/Students/Ted/Mars/Project_rover'>Click HERE to see the code in github</a>
+            <a href='https://maroverted.herokuapp.com/'>Click HERE to see the code in github</a>
         </div>
         <span id = 'opened' style="font-size:20px;cursor:pointer" onclick="openNav()">  &#9776;</span>
              
