--- a/templates/pages/rover.html
+++ b/templates/pages/rover.html
@@ -20,8 +20,9 @@
             <a href="#">Curiosity Rover<br>
                 landed at <br> Gale Crater, Mars <br>
                 11/26/2011 <br><br></a>
-            <a href="https://www.nasa.gov/mission_pages/mars/main/index.html">Click HERE for more about Mars mission<br></a>
-            <a href='https://maroverted.herokuapp.com/'>Click HERE to see the code in github</a>
+            <a href="https://www.nasa.gov/mission_pages/mars/main/index.html">Click HERE for more about Mars mission<br><br></a>
+            <a href='https://maroverted.herokuapp.com/'>Click HERE to see the code in HEROKU</a>
+            <a href='#'>Click HERE to see this coder's portfolio</a>
         </div>
         <span id = 'opened' style="font-size:20px;cursor:pointer" onclick="openNav()">  &#9776;</span>
              
